--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
                          style="height: 500px" alt="...">
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+            <button class="carousel-control-pstoreAddressrev" type="button" data-bs-target="#carouselExampleFade"
                     data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -53,7 +53,7 @@
                 <div class="input-group my-3">
                     <select name="findStore" class="form-control">
                         <option value="">선택</option>
-                        <option value="storeAddress">주소</option>
+                        <option value="">주소</option>
                         <option value="storeName">가게이름</option>
                         <option value="storeMenu">메뉴이름</option>
                     </select>
