--- a/src/main/resources/templates/chattingRoom.html
+++ b/src/main/resources/templates/chattingRoom.html
@@ -1,19 +1,19 @@
 <!-- register.html -->
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
     <meta charset="UTF-8">
     <title>채팅방 작성 페이지</title>
 </head>
-<body>
-    <header th:include="headerNav.html"></header>
+<div layout:fragment="content">
     <h1>채팅방</h1>
-    <main style="background-color: #eee;">
         <div class="container py-5">
 
             <div class="row d-flex justify-content-center">
-                <div class="col-md-8 col-lg-6 col-xl-4">
+                <div class="col-md-8 col-lg-5 col-xl-10">
 
                     <div class="card" id="chat1" style="border-radius: 15px;">
                         <div class="card-header d-flex justify-content-between align-items-center p-3 bg-info text-white border-bottom-0" style="border-top-left-radius: 15px; border-top-right-radius: 15px;">
@@ -27,9 +27,8 @@
                                 <section id="sentMsgContEx">
                                     <div class="d-flex justify-content-start mb-4">
                                         <div>
-                                            <strong id="sendUser" class="rounded-circle border d-flex justify-content-center align-items-center" style="width: 45px; height: 45px;">
-                                                경민
-                                            </strong>
+                                            <!--채팅방 안에 프로필 원 -->
+                                            <strong id="sendUser" class="rounded-circle border d-flex justify-content-center align-items-center" style="width: 45px; height: 45px;"></strong>
                                         </div>
                                         <div id="sendMsg" class="p-3 ms-3 border rounded-2 bg-primary bg-opacity-10">
                                         </div>
@@ -42,16 +41,16 @@
                                     <div class="d-flex justify-content-end mb-4">
                                         <div class="text-muted me-2 d-flex align-items-end">
                                             <small id="receiveDate">
-                                                <!-- 소켓으로 받아온 글쓴날짜-->
+                                                <!--소켓으로 받아온 글쓴날짜-->
                                                 PM 03:44
                                             </small>
                                         </div>
                                         <div id="receiveMsg" class="p-3 me-3 border rounded-2 bg-secondary bg-opacity-10">
-                                            <!-- 소켓으로 받아온 글내용-->
+                                            <!--소켓으로 받아온 글내용-->
                                         </div>
                                         <div>
                                             <strong id="receiveUser" class="rounded-circle border d-flex justify-content-center align-items-center" style="width: 45px; height: 45px;">
-                                                <!-- 소켓으로 받아온 유저이름-->
+                                                <!--소켓으로 받아온 유저이름-->
                                             </strong>
                                         </div>
                                     </div>
@@ -67,7 +66,7 @@
                     <form name="connForm" class="input-group my-4 mx-auto w-75">
                         <strong class="input-group-text">채팅방 입장</strong>
                         <div class="form-floating">
-                            <input class="form-control h-100" name="user" value="경민" placeholder="유저">
+                            <input class="form-control h-100" name="userId" th:value="${session.loginUser.nickname}" placeholder="유저">
                             <label th:text="${session.loginUser.userId}+' 닉네임'"></label>
                         </div>
                         <button class="btn btn-primary">
@@ -77,7 +76,6 @@
                 </div>
             </div>
         </div>
-</main>
 <script th:inline="javascript">
     const LOGIN_U_ID=[[${session.loginUser.userId}]];
     const URL="ws://localhost:9090/chat"
@@ -135,8 +133,6 @@
             }else{
 
             }
-
-
         }
     };
     sendMsgForm.onsubmit=function (e){
@@ -146,5 +142,5 @@
         webSocket.send(JSON.stringify(msgObj));
     }
 </script>
-</body>
+</div>
 </html>
