--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -709,14 +709,153 @@
             <h5 class="ms-5">2.고객센터</h5>
         </div>
     </footer>
-    <button type="button" class="btn btn-outline-warning"
-            style="position: fixed; bottom: 20px; right: 130px; width: 100px;" data-bs-container="body"
-            data-bs-toggle="popover" data-bs-placement="top" data-bs-content="채팅내역?">
-        <a href="/chattingRoom.do" style="color: black; text-decoration: none">채 팅</a>
+    <a class="btn btn-outline-warning"
+            role="button"
+            data-bs-toggle="offcanvas" data-bs-target="#chatOffcanvas"
+            style="position: fixed; bottom: 20px; right: 130px; width: 100px;" data-bs-container="body">
+            채 팅
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
     60
     <span class="visually-hidden">unread messages</span>
     </span>
-    </button>
+    </a>
+
+    <!--채팅 하기 페이지-->
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="chatOffcanvas" aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title">채팅방</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div class="">
+
+                <div class="">
+                    <div class="" style="width: 100%; height: 50rem">
+
+                        <div class="card" id="chat1" style="border-radius: 15px">
+                            <div class="card-body" id="chattingCont" style="height: 46rem; border: none">
+                                <div class="d-none">
+                                    <section id="sentMsgContEx">
+                                        <div class="d-flex justify-content-start mb-4">
+                                            <div>
+                                                <!--채팅방 안에 프로필 원 -->
+                                                <strong id="sendUser" class="rounded-circle border d-flex justify-content-center align-items-center" style="width: 45px; height: 45px;"></strong>
+                                            </div>
+                                            <div id="sendMsg" class="p-3 ms-3 border rounded-2 bg-primary bg-opacity-10">
+                                            </div>
+                                            <div class="text-muted ms-2 d-flex align-items-end">
+                                                <small id="sendDate">PM 03:44</small>
+                                            </div>
+                                        </div>
+                                    </section>
+                                    <section id="receivedMsgContEx">
+                                        <div class="d-flex justify-content-end mb-4">
+                                            <div class="text-muted me-2 d-flex align-items-end">
+                                                <small id="receiveDate">
+                                                    <!--소켓으로 받아온 글쓴날짜-->
+                                                    PM 03:44
+                                                </small>
+                                            </div>
+                                            <div id="receiveMsg" class="p-3 me-3 border rounded-2 bg-secondary bg-opacity-10">
+                                                <!--소켓으로 받아온 글내용-->
+                                            </div>
+                                            <div>
+                                                <strong id="receiveUser" class="rounded-circle border d-flex justify-content-center align-items-center" style="width: 45px; height: 45px;">
+                                                    <!--소켓으로 받아온 유저이름-->
+                                                </strong>
+                                            </div>
+                                        </div>
+                                    </section>
+
+                                </div>
+                            </div>
+                            <form name="sendMsgForm" class="input-group">
+                                <textarea class="form-control w-50" name="msg" rows="2"></textarea>
+                                <button class="btn btn-info">전송</button>
+                            </form>
+                        </div>
+                    </div>
+                        <form name="connForm" class="input-group w-75">
+                            <strong class="input-group-text">채팅방 입장</strong>
+                            <div class="form-floating">
+                                <input class="form-control" name="userId" th:value="${session.loginUser.nickname}" placeholder="유저" style="width: 16.7rem">
+                                <label th:text="${session.loginUser.userId}+' 닉네임'"></label>
+                            </div>
+                            <button class="btn btn-primary" style="margin-right: -90px">
+                                접속
+                            </button>
+                        </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script th:inline="javascript">
+        const LOGIN_U_ID=[[${session.loginUser.userId}]];
+        const URL="ws://localhost:9090/chat"
+        const connForm=document.forms["connForm"];
+        const sendMsgForm=document.forms["sendMsgForm"];
+        const chattingCont=document.getElementById("chattingCont");
+        const receivedMsgContEx = document.getElementById("receivedMsgContEx");
+        const sentMsgContEx = document.getElementById("sentMsgContEx");
+        let webSocket;
+        let nickname;
+        function MsgObj(nickname,msg,status=0){
+            this.userId=LOGIN_U_ID;
+            this.nickname=nickname;
+            this.msg=msg;
+            this.status=status; //0:메세지 1:접속, 2:퇴장
+            this.sendDate=Date.now();
+        }
+        connForm.onsubmit=function (e){
+            e.preventDefault();
+            nickname=connForm.userId.value;
+            webSocket=new WebSocket(URL); //소켓 통신 시작
+            //소켓객체 생성시 실행
+            webSocket.onopen=function (e){
+                const msgObj=new MsgObj(nickname,"입장하셨습니다.",1);
+                webSocket.send(JSON.stringify(msgObj));
+            }
+            //소켓객체를 닫거나 브러우저를 빠져나가면 실행
+            webSocket.onclose=function (e){
+                const msgObj=new MsgObj(nickname,"퇴장하셨습니다.",2);
+                webSocket.send(JSON.stringify(msgObj));
+            }
+            //메세지를 받으면 실행
+            webSocket.onmessage=function (msg){
+                const msgObj=JSON.parse(msg.data);
+                if(msgObj.status===0){ //메세지 정송 받기
+                    if( msgObj.userId===LOGIN_U_ID){//내가 보낸 메세지
+                        const sentMsgCont=sentMsgContEx.cloneNode(true);
+                        const sendMsg=sentMsgCont.querySelector("#sendMsg");
+                        const sendDate=sentMsgCont.querySelector("#sendDate");
+                        const sendUser=sentMsgCont.querySelector("#sendUser");
+                        sendMsg.innerText=msgObj.msg;
+                        sendDate.innerText=new Date(msgObj.sendDate).toLocaleDateString();
+                        sendUser.innerText=`(${msgObj.userId})${msgObj.nickname}`;
+                        chattingCont.append(sentMsgCont);
+                    }else{
+                        const receivedMsgCont=receivedMsgContEx.cloneNode(true);
+                        const receivedMsg=receivedMsgCont.querySelector("#receiveMsg");
+                        const receivedDate=receivedMsgCont.querySelector("#receiveDate");
+                        const receivedUser=receivedMsgCont.querySelector("#receiveUser");
+                        receivedMsg.innerText=msgObj.msg;
+                        receivedDate.innerText=new Date(msgObj.sendDate).toLocaleDateString();
+                        receivedUser.innerText=`(${msgObj.userId})${msgObj.nickname}`;
+                        chattingCont.append(receivedMsgCont);
+                    }
+                }else{
+
+                }
+            }
+        };
+        sendMsgForm.onsubmit=function (e){
+            e.preventDefault();
+            let msg=sendMsgForm.msg.value;
+            const msgObj=new MsgObj(nickname,msg);
+            webSocket.send(JSON.stringify(msgObj));
+        }
+    </script>
+
 </div>
 </html>
