--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
                          style="height: 500px" alt="...">
                 </div>
             </div>
-            <button class="carousel-control-pstoreAddressrev" type="button" data-bs-target="#carouselExampleFade"
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
                     data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -787,3 +787,4 @@
     </script>
 </div>
 </html>
+g
