--- a/src/main/resources/templates/store/detail.html
+++ b/src/main/resources/templates/store/detail.html
@@ -42,7 +42,7 @@
     <span th:text="'/방문자리뷰 '+${s.reviewCount}" class="starReview"></span>
   </div>
   <div class="store">
-    <p class="badge text-bg-warning waitingTeam">현재 10팀 대기중입니다.</p>
+    <p th:text="'현재 '+${s.waiting.waitingCnt}+'팀 대기중입니다.'" class="badge text-bg-warning waitingTeam">현재 10팀 대기중입니다.</p>
   </div>
   <div class="store">
     <ul class="list-group">
@@ -255,9 +255,9 @@
                 <a th:href="'/review/'+${s.storeNum}+'/'+${r.reviewNum}+'/remove.do'" class="btn btn-outline-danger px-1 pt-0" style="height: 25px;">삭제하기</a>
               </div>
             </th:block>
-            <th:block th:unless="${session.loginUser!=null && #strings.equals(session.loginUser.userId,r.userId)}">
-              <th:block th:include="/store/report"></th:block>
-            </th:block>
+<!--            <th:block th:unless="${session.loginUser!=null && #strings.equals(session.loginUser.userId,r.userId)}">-->
+<!--              <th:block th:include="/store/report"></th:block>-->
+<!--            </th:block>-->
           </div>
         </div>
         <div class="card-body d-flex">
