--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -47,15 +47,15 @@
         </div>
         <div class="userCard-right">
             <a class="followbox" th:href="@{'/user/{userId}/follow.do'(userId=${user.userId})}">
-                <span style="background-color: #61b977">팔로워</span>
-                <span>팔로잉</span>
+                <span style="background-color: #61b977">
+                    팔로워 <span th:text="${(user.followers!=null)?user.followers.size():0}"></span>
+                </span>
+                <span>
+                    팔로잉 <span th:text="${(user.followings!=null)?user.followings.size():0}"></span>
+                </span>
             </a>
 
             <p th:text="${user.introduce}+${user.faceUrl}+${user.youtubeUrl}+${user.instaUrl}"></p>
-
-            <div class="user-badgebox">
-                뱃지
-            </div>
 
             <ul style="border : 1px solid black;">
                 <li>
