--- a/src/main/resources/templates/user/detail/waiting/waiting.html
+++ b/src/main/resources/templates/user/detail/waiting/waiting.html
@@ -19,7 +19,7 @@
                 <td th:text="${visited.listNum}"></td>
                 <td th:text="${visited.storeName}"></td>
                 <td th:text="${visited.address}"></td>
-                <td colspan="2" th:text="${visited.visitedDate}"></td>
+                <td colspan="2" th:text="${#dates.format(visited.visitedDate,'yyyy-MM-dd')}"></td>
             </tr>
         </tbody>
         </table>
