--- a/src/main/resources/templates/user/follow/follow.html
+++ b/src/main/resources/templates/user/follow/follow.html
@@ -13,35 +13,23 @@
         <div class="nav nav-tabs" id="nav-tab" role="tablist">
             <button class="nav-link active"  data-bs-toggle="tab" data-bs-target="#followersNav" type="button" role="tab">
                 팔로워
-                <span th:text="${(user.followers!=null)?user.followers.size():0}"></span>
             </button>
             <button class="nav-link"  data-bs-toggle="tab" data-bs-target="#followingsNav" type="button" role="tab">
                 팔로우
-                <span th:text="${(user.followings!=null)?user.followings.size():0}"></span>
             </button>
         </div>
     </nav>
     <div class="tab-content" id="nav-tabContent">
         <div class="tab-pane fade show active" id="followersNav" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
             <h2>팔로워 리스트</h2>
-            <div id="followerCont" class="list-group">
-                <div th:each="f:${user.followers}"
-                     class="list-group-item d-flex justify-content-between align-items-center">
-                    <th:block th:include="/user/follow/profile"></th:block>
-                    <button th:onclick="toggleFollower([[${f.userId}]],this)" type="button" class="btn btn-outline-danger">삭제</button>
-                </div>
+            <div id="followerCont" class="list-group overflow-auto" style="height: 60vh;">
+                <th:block th:include="/user/follow/followers"></th:block>
             </div>
         </div>
         <div class="tab-pane fade" id="followingsNav" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
             <h2>팔로잉 리스트</h2>
-            <div id="followingCont" class="list-group">
-                <div th:each="f:${user.followings}"
-                     class="list-group-item d-flex justify-content-between align-items-center">
-                    <th:block th:include="/user/follow/profile"></th:block>
-                    <button
-                            th:onclick="toggleFollowing([[${f.userId}]],this)"
-                            type="button" class="btn btn-outline-primary active">팔로잉</button>
-                </div>
+            <div id="followingCont" class="list-group overflow-auto" style="height: 60vh;">
+                <th:block th:include="/user/follow/followings"></th:block>
             </div>
 
         </div>
