--- a/src/main/resources/templates/waiting/waitingModify.html
+++ b/src/main/resources/templates/waiting/waitingModify.html
@@ -42,7 +42,7 @@
                     <h4>인원 변경</h4>
                     <form name="modifyForm" id="modifyForm" method="post" action="waitingModify.do">
                       <div class="form-group">
-                        <label for="people-input">인원 수</label>
+                        <label for="user-people">인원 수</label>
                         <div class="input-group">
                           <div class="input-group-prepend">
                             <button class="btn btn-outline-secondary" type="button" id="minus-btn">-</button>
