재연 약간 수정

--- a/src/main/resources/templates/pageNav.html
+++ b/src/main/resources/templates/pageNav.html
@@ -32,3 +32,4 @@
        th:href="@{''(pageNumber=${page.pages},order=${param.order!=null?param.order[0]:''},direct=${param.direct!=null?param.direct[0]:''},menuType=${param.menuType!=null?param.menuType[0]:''},menuName=${param.menuName!=null?param.menuName[0]:''},priceRange=${param.priceRange!=null?param.priceRange[0]:''},priceType=${param.priceType},parking=${param.parking!=null?param.parking[0]:''},parkingType=${param.parkingType})}"
     >>></a></li>
 </ul>
+<!-- 이제 필요없지만 남겨둔 코드 -->
