--- a/src/main/resources/templates/user/modify.html
+++ b/src/main/resources/templates/user/modify.html
@@ -3,17 +3,19 @@
       layout:decorate="~{layout}">
 <head>
     <title>회원수정 폼</title>
+    <script src="modify.html"></script>
 </head>
 <div layout:fragment="content">
     <form name="signupForm" action="/user/modify.do" method="post" style="width: 800px;margin: 0 auto;border: 1px solid black;">
-
-        <div class="card" style="width: 18rem;">
+    <div class="d-flex justify-content-center border-primary">
+        <div class="profileCard" style="width: 18rem;">
             <img src="user.profileImg" alt="프로필 이미지" class="card-img-top">
             <div class="card-body">
                 <p class="card-text">회원수정</p>
             </div>
-
         </div>
+    </div>
+
 
 
 
