--- a/src/main/resources/templates/user/detail/recommend/recommend.html
+++ b/src/main/resources/templates/user/detail/recommend/recommend.html
@@ -22,14 +22,16 @@
             <span th:text="${recommend.comment}"></span>
             <span th:if="${recommend.comment==null}">코멘트</span>
         </li>
-        <li class="list-group-item">
-            <button th:onclick="loadModifyRecommend([[${recommend.userId}]],[[${recommend.storeNum}]])" class="btn btn-primary">
-                수정
-            </button>
-            <button th:onclick="removeRecommend([[${recommend.userId}]],[[${recommend.storeNum}]])" class="btn btn-primary">
-                삭제
-            </button>
-        </li>
+        <th:block th:if="${session.loginUser.userId==user.userId}">
+            <li class="list-group-item">
+<!--                <button th:onclick="loadModifyRecommend([[${recommend.userId}]],[[${recommend.storeNum}]])" class="btn btn-primary">-->
+<!--                    수정-->
+<!--                </button>-->
+                <button th:onclick="removeRecommend([[${recommend.userId}]],[[${recommend.storeNum}]])" class="btn btn-primary">
+                    삭제
+                </button>
+            </li>
+        </th:block>
     </ul>
 </div>
 
@@ -71,6 +73,23 @@
 <!--      </div>-->
 <!--    </div>-->
 <!--  </div>-->
+<!--</div>-->
+
+<!--<div id="recommendModifyModal" th:classappend="modal" tabindex="-1">-->
+<!--    <div class="modal-dialog">-->
+<!--        <form action="modal-contend" name="recommendModifyForm" method="post" enctype="multipart/form-data">-->
+<!--            <input type="hidden" name="recommendStoreNum">-->
+<!--            <input type="hidden" name="userId">-->
+<!--            <input type="hidden" name="storeNum">-->
+<!--            <div class="modal-header">-->
+<!--                <h5 class="modat-title">추천 가게 수정</h5>-->
+<!--                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+<!--            </div>-->
+<!--            <div id="recommendModifyModalBody" class="modal-body">-->
+
+<!--            </div>-->
+<!--        </form>-->
+<!--    </div>-->
 <!--</div>-->
 </html>
 
