--- a/src/main/resources/templates/waiting/waitingAdd.html
+++ b/src/main/resources/templates/waiting/waitingAdd.html
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" style="min-width: 500px;">
       <div class="col-lg-12">
         <!-- 가게 정보? -->
         <div class="card store-info">
@@ -32,7 +32,7 @@
             <h2 class="card-title" th:text="${stores.storeName}"></h2>
             <div class="row">
               <div class="col-sm-6">
-                <!--                <img th:src="'http://localhost:8088'+${s.mainImg}">-->
+                                <img th:src="'http://localhost:8088'+${stores.mainImg}">
               </div>
               <div class="col-sm-6">
                 <div class="waiting-input">
