--- a/src/main/resources/templates/waiting/waitingModify.html
+++ b/src/main/resources/templates/waiting/waitingModify.html
@@ -35,7 +35,7 @@
               <h2 class="card-title"></h2>
               <div class="row">
                 <div class="col-sm-6">
-<!--                  <img th:src="@{/static/images/store_img.jpg}" class="store-img">-->
+                  <img th:src="'http://localhost:8088'+${stores.mainImg}">
                 </div>
                 <div class="col-sm-6">
                   <div class="waiting-input">
