웨이팅 조금더 수정함

--- a/src/main/resources/templates/waiting/waitingAdd.html
+++ b/src/main/resources/templates/waiting/waitingAdd.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div layout:fragment="content">
-  <div class="d-flex justify-content-center mb-5">
-    <div class="alert alert-warning" role="alert">
+  <div class="d-flex justify-content-center mb-5 mt-5">
+    <div class="alert alert-warning me-3" role="alert" style="max-width: 450px;">
       <div style="align-content: center; text-align: center">
         <p ><strong>주의사항</strong> <br>
           입장 알림 후 일정시간을 초과한 경우 강제 취소가 될 수 있습니다.
