--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -348,8 +348,10 @@
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title" th:text="${store.storeName}">오늘의 베스트 추천가게는!?</h5>
-                        <p class="card-text" th:text="${store.detailInfo}">베스트 추천가게 디테일!</p>
+                        <h3 class="text-center">
+                            <a th:href="@{'/store/{storeNum}/detail.do'(storeNum=${store.storeNum})}" th:text="${store.storeName}" style="text-decoration: none; color: inherit; width: 100px"></a>
+                        </h3>
+                        <p class="card-text text-center mt-3" style="font-size: 20px" th:text="${store.detailInfo}">베스트 추천가게 디테일!</p>
                     </div>
                 </div>
             </div>
